--- a/Code/DataQuality/DataQuality.csproj
+++ b/Code/DataQuality/DataQuality.csproj
@@ -50,6 +50,12 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -88,8 +94,14 @@
       <DependentUpon>CGWJPZFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Common\AccessHelper.cs" />
+    <Compile Include="Common\CheckFile.cs" />
     <Compile Include="Common\CheckPath.cs" />
+    <Compile Include="Common\CheckZhiBiao.cs" />
     <Compile Include="Common\ComMsg.cs" />
+    <Compile Include="Common\CreateFile.cs" />
+    <Compile Include="Common\QuHuaHelper.cs" />
+    <Compile Include="Common\ResultEntity.cs" />
+    <Compile Include="Common\WriteFile.cs" />
     <Compile Include="GZPZCrl.cs">
       <SubType>UserControl</SubType>
     </Compile>
