--- a/Code/DataQuality/DataQuality.csproj
+++ b/Code/DataQuality/DataQuality.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -102,6 +102,12 @@
     <Compile Include="Common\QuHuaHelper.cs" />
     <Compile Include="Common\ResultEntity.cs" />
     <Compile Include="Common\WriteFile.cs" />
+    <Compile Include="EditPasswordFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditPasswordFrm.Designer.cs">
+      <DependentUpon>EditPasswordFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GZPZCrl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -115,6 +121,12 @@
       <DependentUpon>GZPZFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Common\Helper.cs" />
+    <Compile Include="LoginFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginFrm.Designer.cs">
+      <DependentUpon>LoginFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainCrl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -193,11 +205,17 @@
     <EmbeddedResource Include="CGWJPZFrm.resx">
       <DependentUpon>CGWJPZFrm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="EditPasswordFrm.resx">
+      <DependentUpon>EditPasswordFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GZPZCrl.resx">
       <DependentUpon>GZPZCrl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GZPZFrm.resx">
       <DependentUpon>GZPZFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginFrm.resx">
+      <DependentUpon>LoginFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainCrl.resx">
       <DependentUpon>MainCrl.cs</DependentUpon>
